# advent-of-code.py

./: .mypy.ini  .pre-commit-config.yaml  .python-version  logging.trace  pyproject.toml  requirements.txt  solution.py.tmpl
2022/02/: part_one.py  part_two.py
2022/03/: part_one.py  part_two.py
2022/04/: part_two.py
2023/: README.md
2023/01/: 2_calibration_values_words.py  prompt_with_solutions.md
2023/02/: README.md  part_one.py
2023/03/: README.md  part_one.py  part_two.py
2023/04/: part_one.py  part_two.py  part_two_bis.py  prompt_with_solutions.md
2023/05/: README.md  part_one.py  part_two.py
2023/06/: part_two.py  prompt_with_solutions.md
2023/07/: prompt_with_solutions.md
2023/08/: README.md  part_two.py
2023/09/: part_one.py  prompt_with_solutions.md
2023/10/: prompt_with_solutions.md
2023/11/: README.md
aocl/: __init__.py  base.py  linalg.py  p2.py  parser.py
aocl/algo/: dijkstra.py  pick.py
y2015/d01/: solution.py  test_input
y2015/d02/: solution.py  test_input
y2015/d03/: solution.py  test_input
y2015/d04/: solution.py  test_input
y2015/d05/: solution.py  test_input
y2015/d07/: solution.py  test_input
y2015/d08/: solution.py  test_input
y2015/d09/: solution.py  test_input
y2015/d10/: solution.py  test_input
y2022/d01/: README.md  solution.py  test_input
y2022/d03/: README.md  solution.py  test_input
y2022/d04/: test_input
y2022/d05/: README.md  test_input
y2022/d06/: test_input
y2022/d07/: README.md  test_input
y2023/: README.md
y2023/d01/: test_input
y2023/d02/: README.md  (+2 more)
y2024/: README.md
(+153 files in other folders)
